--- a/学习笔记.md
+++ b/学习笔记.md
@@ -31,5 +31,10 @@
 
 ***-o：*** 只显示匹配pattern的部分（而非行）。
 
+***-l：*** 只显示内容匹配pattern的文件的名称。
+
+***-r：*** 递归匹配，即遇到目录后会匹配其中的文件（grep遇到目录时，需要加-d<动作>，-r相当于-d recurse）。
+
 ***--group-separator='string'：*** 如果有多个符合pattern的行，在每行之间加入string作为分隔行。
 
+### sed
