--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,4 +1,5 @@
 &>\dev\null：将所有多余报告引入虚空。
+
 2>&1：将标准错误重定向到标准输出，其会和标准输出一起被打印。
 
 \>为覆盖写入，>>为追加写入。
@@ -58,7 +59,7 @@
 
 ***-n：*** 仅显示经动作处理后的结果，常与动作p或s连用。
 
--r：使用扩展正则表达式
+***-r：*** 使用扩展正则表达式
 
 ***替换s：*** 
 ```
