--- a/学习笔记.md
+++ b/学习笔记.md
@@ -71,6 +71,7 @@
 ***替换s：*** 
 ```
 sed 's/要被取代的字串/新的字串/'      #只替换每行第一个匹配的子串
+sed 's/要被取代的字串/新的字串/l'     #匹配时不区分大小写
 sed 's/要被取代的字串/新的字串/g'     #替换每行所有匹配的子串
 sed '2,4s/要被取代的字串/新的字串/'   #只替换第2至第4行
 
