--- a/学习笔记.md
+++ b/学习笔记.md
@@ -15,6 +15,27 @@
 
 <br>
 
+### sort
+***-n：***按照数值大小排序。
+
+***-t \<string\>：***指定列之间的分隔符。
+
+***-k \<num\>：***按第num列排序（可多次使用）。
+
+***-r：***逆序。
+
+<br>
+
+### cut
+***-c \<num\>：***以字符为单位分割，并选择每行第几个字符。
+
+***-d \<string\>：***指定列之间的分隔符。
+
+***-f \<num\>：***选择列。
+
+
+<br>
+
 ### find
 ```find   path   -option   [   -print ]   [ -exec   -ok   command ]   {} \;```
 
